# aws-robomaker-worldforge-mapping-evaluation-sample-app

./: .gitignore  README.md
setup_scripts/: create_batch_params.py
simulation_ws/: .rosinstall
simulation_ws/src/simulation_app/: CMakeLists.txt  package.xml
simulation_ws/src/simulation_app/launch/: mapping_sample_application.launch  turtlebot3_mapping_setup.launch  turtlebot3_navigation.launch  worldforge_turtlebot_navigation.launch
simulation_ws/src/simulation_app/rviz/: view_data.rviz
simulation_ws/src/simulation_app/scripts/: file_uploader.py
