<?xml version="1.0"?>
<package format="2">
  <name>simulation_app</name>
  <version>0.0.0</version>
  <description>The simulation_app package</description>

  <maintainer email="vamshi@todo.todo">vamshi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>rviz</depend>
  <depend>python3-lxml</depend>
  <depend>teleop_twist_keyboard</depend>
  <!-- Required to install .rviz model-->
  <depend>turtlebot3_description</depend>
  <!-- Navigation stack -->
  <depend>turtlebot3_navigation</depend>
  <exec_depend>gazebo</exec_depend>
  <depend>gmapping</depend>
  <depend>dwa_local_planner</depend>
  <depend>robot_state_publisher</depend>
  <depend>s3_file_uploader</depend>
  <depend>move_base</depend>
  <depend>aws_robomaker_simulation_ros_pkgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
